[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://towers/Tower.gd" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 96.0

[sub_resource type="CircleShape2D" id=2]
radius = 14.0

[node name="Tower" type="Node2D"]
script = ExtResource( 1 )

[node name="RangeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource( 1 )

[node name="SelectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectArea"]
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
